--- a/index.html
+++ b/index.html
@@ -59,44 +59,6 @@
 	<!-- Chat with us -->
 	<link rel="stylesheet" href="./assets/css/chat-bot.css" />
 	<div id="whatsapp-chat" class="hide">
-		<div class="whatsapp-chat-header" style="color: #fff">
-			<div class="whatsapp-chat-avatar">
-				<img src="https://img1.wsimg.com/isteam/ip/d15ac042-6efa-4f93-b6c9-7b1a168d0c10/blob.png/:/rs=w:195,h:195,cg:true,m/cr=w:195,h:195/qt=q:95"
-					alt="CHILDDR Logo" />
-			</div>
-			<p>
-				<span class="whatsapp-chat-name" style="color: #fff">CHILDDR</span><br />
-				<small style="color: #fff">Available</small>
-			</p>
-		</div>
-
-		<div class="start-chat">
-			<div pattern="https://elfsight.com/assets/chats/patterns/whatsapp.png"
-				class="WhatsappChat__Component-sc-1wqac52-0 whatsapp-chat-body">
-				<div class="WhatsappChat__MessageContainer-sc-1wqac52-1 dAbFpq">
-					<div style="opacity: 0" class="WhatsappDots__Component-pks5bf-0 eJJEeC">
-						<div class="WhatsappDots__ComponentInner-pks5bf-1 hFENyl">
-							<div class="WhatsappDots__Dot-pks5bf-2 WhatsappDots__DotOne-pks5bf-3 ixsrax"></div>
-							<div class="WhatsappDots__Dot-pks5bf-2 WhatsappDots__DotTwo-pks5bf-4 dRvxoz"></div>
-							<div class="WhatsappDots__Dot-pks5bf-2 WhatsappDots__DotThree-pks5bf-5 kXBtNt"></div>
-						</div>
-					</div>
-					<div style="opacity: 1" class="WhatsappChat__Message-sc-1wqac52-4 kAZgZq">
-						<div class="WhatsappChat__Author-sc-1wqac52-3 bMIBDo">
-							CHILDDR
-						</div>
-						<div class="WhatsappChat__Text-sc-1wqac52-2 iSpIQi">
-							Hi there 👋<br /><br />How can I help you?
-						</div>
-						<div class="WhatsappChat__Time-sc-1wqac52-5 cqCDVm">
-							1:40
-						</div>
-					</div>
-				</div>
-			</div>
-			<div id="get-number"></div>
-			<a class="close-chat" href="javascript:void">×</a>
-		</div>
 		<a class="blantershow-chat" href="https://wa.me/15550852750?text=Hello" target="_blank" title="Show Chat">
 			<svg width="30" viewBox="0 0 24 24">
 				<defs />
@@ -107,15 +69,8 @@
 				<path fill="#fafafa"
 					d="M17.5 14.3c-.3 0-1.8-.8-2-.9-.7-.2-.5 0-1.7 1.3-.1.2-.3.2-.6.1s-1.3-.5-2.4-1.5a9 9 0 01-1.7-2c-.3-.6.4-.6 1-1.7l-.1-.5-1-2.2c-.2-.6-.4-.5-.6-.5-.6 0-1 0-1.4.3-1.6 1.8-1.2 3.6.2 5.6 2.7 3.5 4.2 4.2 6.8 5 .7.3 1.4.3 1.9.2.6 0 1.7-.7 2-1.4.3-.7.3-1.3.2-1.4-.1-.2-.3-.3-.6-.4z" />
 			</svg>
-			Chat with Us</a>
-
-		<div class="blanter-msg">
-			<textarea id="chat-input" placeholder="Write a response" maxlength="120" row="1"></textarea>
-			<a href="javascript:void;" id="send-it"><svg viewBox="0 0 448 448">
-					<path d="M.213 32L0 181.333 320 224 0 266.667.213 416 448 224z" />
-				</svg>
-			</a>
-		</div>
+			Chat with Us
+		</a>
 	</div>
 	<div id="get-number"></div>
 	<a class="close-chat" href="javascript:void">×</a>
@@ -332,229 +287,29 @@
 										<a href="#" class="nav-link"> Home </a>
 									</li>
 									<li class="nav-item">
-										<a href="#" class="nav-link">
+										<a href="about.html" class="nav-link">
+											About
+										</a>
+									</li>
+									<li class="nav-item">
+										<a href="doctors.html" class="nav-link">
 											Doctors
-											<i class="bx bx-chevron-down"></i>
 										</a>
-										<ul class="dropdown-menu">
-											<li class="nav-item">
-												<a href="#" class="nav-link">
-													Doctors Dashboard
-													<i class="bx bx-chevron-down"></i>
-												</a>
-												<ul class="dropdown-menu">
-													<li class="nav-item">
-														<a href="doctors-dashboard.html" class="nav-link">
-															Dashboard
-														</a>
-													</li>
-													<li class="nav-item">
-														<a href="appointments.html" class="nav-link">
-															Appointments
-														</a>
-													</li>
-													<li class="nav-item">
-														<a href="patients.html" class="nav-link">
-															Patients
-														</a>
-													</li>
-													<li class="nav-item">
-														<a href="schedule-time.html" class="nav-link">
-															Schedule Time
-														</a>
-													</li>
-													<li class="nav-item">
-														<a href="invoices.html" class="nav-link">
-															Invoices
-														</a>
-													</li>
-													<li class="nav-item">
-														<a href="reviews.html" class="nav-link">
-															Reviews
-														</a>
-													</li>
-													<li class="nav-item">
-														<a href="change-password.html" class="nav-link">
-															Change Password
-														</a>
-													</li>
-													<li class="nav-item">
-														<a href="login.html" class="nav-link">
-															Login
-														</a>
-													</li>
-												</ul>
-											</li>
-											<li class="nav-item">
-												<a href="doctors.html" class="nav-link">
-													Doctors
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="doctors-details.html" class="nav-link">
-													Doctors Details
-												</a>
-											</li>
-										</ul>
 									</li>
+									
 									<li class="nav-item">
-										<a href="#" class="nav-link">
-											Pages
-											<i class="bx bx-chevron-down"></i>
-										</a>
-										<ul class="dropdown-menu">
-											<li class="nav-item">
-												<a href="about.html" class="nav-link">
-													About
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="pricing.html" class="nav-link">
-													Pricing
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="testimonials.html" class="nav-link">
-													Testimonials
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="gallery.html" class="nav-link">
-													Gallery
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="my-account.html" class="nav-link">
-													My Account
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="#" class="nav-link">
-													Shop
-													<i class="bx bx-chevron-down"></i>
-												</a>
-												<ul class="dropdown-menu">
-													<li class="nav-item">
-														<a href="shop.html" class="nav-link">
-															Shop
-														</a>
-													</li>
-													<li class="nav-item">
-														<a href="cart.html" class="nav-link">
-															Cart
-														</a>
-													</li>
-													<li class="nav-item">
-														<a href="checkout.html" class="nav-link">
-															Checkout
-														</a>
-													</li>
-													<li class="nav-item">
-														<a href="products-details.html" class="nav-link">
-															Products Details
-														</a>
-													</li>
-												</ul>
-											</li>
-											<li class="nav-item">
-												<a href="faq.html" class="nav-link">
-													FAQ
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="error-404.html" class="nav-link">
-													Error Page
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="terms-of-service.html" class="nav-link">
-													Terms of Service
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="privacy-policy.html" class="nav-link">
-													Privacy Policy
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="coming-soon.html" class="nav-link">
-													Coming Soon
-												</a>
-											</li>
-										</ul>
-									</li>
-									<li class="nav-item">
-										<a href="#" class="nav-link">
-											Patient
-											<i class="bx bx-chevron-down"></i>
-										</a>
-										<ul class="dropdown-menu">
-											<li class="nav-item">
-												<a href="patient-dashboard.html" class="nav-link">
-													Dashboard
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="favorite-doctors.html" class="nav-link">
-													Favorite Doctors
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="submit-review.html" class="nav-link">
-													Submit Review
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="book-appointment.html" class="nav-link">
-													Book Appointment
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="register.html" class="nav-link">
-													Register
-												</a>
-											</li>
-										</ul>
-									</li>
-									<li class="nav-item">
-										<a href="#" class="nav-link">
+										<a href="services.html" class="nav-link">
 											Services
-											<i class="bx bx-chevron-down"></i>
 										</a>
-										<ul class="dropdown-menu">
-											<li class="nav-item">
-												<a href="services.html" class="nav-link">
-													Services
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="services-details.html" class="nav-link">
-													Services Details
-												</a>
-											</li>
-										</ul>
-									</li>
-									<li class="nav-item">
-										<a href="#" class="nav-link">
-											Blog
-											<i class="bx bx-chevron-down"></i>
-										</a>
-										<ul class="dropdown-menu">
-											<li class="nav-item">
-												<a href="blog.html" class="nav-link">
-													Blog
-												</a>
-											</li>
-											<li class="nav-item">
-												<a href="blog-details.html" class="nav-link">
-													Blog Details
-												</a>
-											</li>
-										</ul>
 									</li>
 									<li class="nav-item">
 										<a href="contact.html" class="nav-link">
 											Contact
+										</a>
+									</li>
+									<li class="nav-item">
+										<a href="terms-of-service.html" class="nav-link">
+											Term &#38 Condition
 										</a>
 									</li>
 									<li class="nav-item">
@@ -574,7 +329,7 @@
 											</style>
 											<div class="others-options d-flex align-items-center">
 												<div class="call-icon option-item">
-													<i class="bx bxs-phone" style="
+													<i class="fab fa-whatsapp" style="
 															color: #BF40BF;
 															font-size: 2rem;
 															padding-right: 10px;
@@ -1815,46 +1570,6 @@
 										<i class="bx bxl-linkedin"></i>
 									</a>
 								</li>
-							</ul>
-						</div>
-					</div>
-
-					<div class="col-lg-3 col-sm-6">
-						<div class="single-footer-widget">
-							<h2>Departments</h2>
-
-							<ul class="quick-links">
-								<li>
-									<a href="services-details.html">Dental Services</a>
-								</li>
-								<li>
-									<a href="#">Emergency Medicine</a>
-								</li>
-								<li>
-									<a href="#">Ophthalmology</a>
-								</li>
-								<li>
-									<a href="#">Orthopedic Surgery</a>
-								</li>
-								<li>
-									<a href="#">Neurosurgery</a>
-								</li>
-								<li>
-									<a href="#">Radiation Oncology</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-
-					<div class="col-lg-3 col-sm-6">
-						<div class="single-footer-widget">
-							<h2>Opening Hours</h2>
-
-							<ul class="opening-hours">
-								<li>Mon-Tues: <span>6:00-10:00</span></li>
-								<li>Wed-Thurs: <span>6:00-10:00</span></li>
-								<li>Sat-Sun: <span>6:00-10:00</span></li>
-								<li>Friday: <span>Closed</span></li>
 							</ul>
 						</div>
 					</div>
