--- a/index.html
+++ b/index.html
@@ -557,13 +557,13 @@
 											Contact
 										</a>
 									</li>
-									<li class="nav-item">
+									<!-- <li class="nav-item">
 										<div class="nav-link mt-2 switch-box1">
 											<label id="switch" class="switch"><input type="checkbox"
 													onchange="toggleTheme()" id="slider" /><span
 													class="slider round"></span></label>
 										</div>
-									</li>
+									</li> -->
 									<li class="nav-item">
 										<div class="nav-link mt-2 switch-box1">
 											<style>
@@ -668,7 +668,7 @@
 												Health
 											</h1>
 											<p>
-												We are Available digitally to solve health issues.
+												We are available digitally to solve health issues.
 											</p>
 										</div>
 										<style>
@@ -973,290 +973,6 @@
 			</div>
 		</section>
 		<!-- End About Area -->
-		<!-- Start Doctor Area -->
-		<section class="doctor-area pb-70">
-			<div class="container-fluid">
-				<div class="doctor-inner-box">
-					<div class="row align-items-center">
-						<div class="col-lg-9 col-md-12">
-							<div class="section-title">
-								<h2>Our Specialized Doctor Details</h2>
-								<div class="bar"></div>
-								<p>
-									Lorem ipsum dolor sit amet consectetur
-									adipiscing elit sed do eiusmod tempor
-									incididunt labore et dolore magna aliqua ut
-									enim ad minim veniam quis nostrud
-									exercitation labor.
-								</p>
-							</div>
-						</div>
-
-						<div class="col-lg-3 col-md-12">
-							<div class="specialist-btn">
-								<a href="#" class="default-btn">View Specialist</a>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="doctor-slider owl-carousel owl-theme">
-					<div class="single-doctor">
-						<div class="doctor-image">
-							<a href="doctors-details.html"><img src="assets/img/doctor/doctor-1.jpg" alt="image" /></a>
-
-							<a href=""><i class="flaticon-like"></i></a>
-						</div>
-
-						<div class="doctor-content">
-							<h3>
-								<a href="doctors-details.html">Dr. Daniel Peter</a>
-							</h3>
-							<p class="designation">DNB General Medicine</p>
-							<a href="#" class="department-btn">Cardiology</a>
-
-							<ul class="rating">
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-							</ul>
-
-							<ul class="information-list">
-								<li>
-									<i class="flaticon-pin"></i>50 Nortambiya,
-									UK
-								</li>
-								<li>
-									<i class="flaticon-wall-clock"></i>Mon: 3:00
-									AM - 5:00 PM
-								</li>
-								<li><i class="flaticon-money"></i>$125.00</li>
-							</ul>
-
-							<div class="doctor-btn">
-								<a href="doctors-details.html" class="default-btn">View Details</a>
-								<a href="book-appointment.html" class="optional-btn">Book Now</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="single-doctor">
-						<div class="doctor-image">
-							<a href="doctors-details.html"><img src="assets/img/doctor/doctor-1.jpg" alt="image" /></a>
-
-							<a href=""><i class="flaticon-like"></i></a>
-						</div>
-
-						<div class="doctor-content">
-							<h3>
-								<a href="doctors-details.html">Dr. William</a>
-							</h3>
-							<p class="designation">DNB General Medicine</p>
-							<a href="#" class="department-btn">Dentist</a>
-
-							<ul class="rating">
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-							</ul>
-
-							<ul class="information-list">
-								<li>
-									<i class="flaticon-pin"></i>50 Nortambiya,
-									UK
-								</li>
-								<li>
-									<i class="flaticon-wall-clock"></i>Mon: 2:00
-									AM - 7:00 PM
-								</li>
-								<li><i class="flaticon-money"></i>$1255.00</li>
-							</ul>
-
-							<div class="doctor-btn">
-								<a href="doctors-details.html" class="default-btn">View Details</a>
-								<a href="book-appointment.html" class="optional-btn">Book Now</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="single-doctor">
-						<div class="doctor-image">
-							<a href="doctors-details.html"><img src="assets/img/doctor/doctor-1.jpg" alt="image" /></a>
-
-							<a href=""><i class="flaticon-like"></i></a>
-						</div>
-
-						<div class="doctor-content">
-							<h3>
-								<a href="doctors-details.html">Dr. Myles</a>
-							</h3>
-							<p class="designation">DNB General Medicine</p>
-							<a href="#" class="department-btn">Oncology</a>
-
-							<ul class="rating">
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-							</ul>
-
-							<ul class="information-list">
-								<li>
-									<i class="flaticon-pin"></i>50 Nortambiya,
-									UK
-								</li>
-								<li>
-									<i class="flaticon-wall-clock"></i>Mon: 8:00
-									AM - 12:00 PM
-								</li>
-								<li><i class="flaticon-money"></i>$255.00</li>
-							</ul>
-
-							<div class="doctor-btn">
-								<a href="doctors-details.html" class="default-btn">View Details</a>
-								<a href="book-appointment.html" class="optional-btn">Book Now</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="single-doctor">
-						<div class="doctor-image">
-							<a href="doctors-details.html"><img src="assets/img/doctor/doctor-1.jpg" alt="image" /></a>
-
-							<a href=""><i class="flaticon-like"></i></a>
-						</div>
-
-						<div class="doctor-content">
-							<h3>
-								<a href="doctors-details.html">Dr. Fouad</a>
-							</h3>
-							<p class="designation">DNB General Medicine</p>
-							<a href="#" class="department-btn">Urology</a>
-
-							<ul class="rating">
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-							</ul>
-
-							<ul class="information-list">
-								<li>
-									<i class="flaticon-pin"></i>50 Nortambiya,
-									UK
-								</li>
-								<li>
-									<i class="flaticon-wall-clock"></i>Mon: 6:00
-									AM - 8:00 PM
-								</li>
-								<li><i class="flaticon-money"></i>$455.00</li>
-							</ul>
-
-							<div class="doctor-btn">
-								<a href="doctors-details.html" class="default-btn">View Details</a>
-								<a href="book-appointment.html" class="optional-btn">Book Now</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="single-doctor">
-						<div class="doctor-image">
-							<a href="doctors-details.html"><img src="assets/img/doctor/doctor-1.jpg" alt="image" /></a>
-
-							<a href=""><i class="flaticon-like"></i></a>
-						</div>
-
-						<div class="doctor-content">
-							<h3><a href="doctors-details.html">Dr. Mark</a></h3>
-							<p class="designation">DNB General Medicine</p>
-							<a href="#" class="department-btn">Pulmonology</a>
-
-							<ul class="rating">
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-							</ul>
-
-							<ul class="information-list">
-								<li>
-									<i class="flaticon-pin"></i>50 Nortambiya,
-									UK
-								</li>
-								<li>
-									<i class="flaticon-wall-clock"></i>Mon: 9:00
-									AM - 11:00 PM
-								</li>
-								<li><i class="flaticon-money"></i>$455.00</li>
-							</ul>
-
-							<div class="doctor-btn">
-								<a href="doctors-details.html" class="default-btn">View Details</a>
-								<a href="book-appointment.html" class="optional-btn">Book Now</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="single-doctor">
-						<div class="doctor-image">
-							<a href="doctors-details.html"><img src="assets/img/doctor/doctor-1.jpg" alt="image" /></a>
-
-							<a href=""><i class="flaticon-like"></i></a>
-						</div>
-
-						<div class="doctor-content">
-							<h3>
-								<a href="doctors-details.html">Dr. Corrie</a>
-							</h3>
-							<p class="designation">DNB General Medicine</p>
-							<a href="#" class="department-btn">Allergy</a>
-
-							<ul class="rating">
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-								<li><i class="bx bxs-star"></i></li>
-							</ul>
-
-							<ul class="information-list">
-								<li>
-									<i class="flaticon-pin"></i>50 Nortambiya,
-									UK
-								</li>
-								<li>
-									<i class="flaticon-wall-clock"></i>Mon:
-									11:00 AM - 11:00 PM
-								</li>
-								<li><i class="flaticon-money"></i>$455.00</li>
-							</ul>
-
-							<div class="doctor-btn">
-								<a href="doctors-details.html" class="default-btn">View Details</a>
-								<a href="book-appointment.html" class="optional-btn">Book Now</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="doctor-shape">
-				<div class="shape-1">
-					<img src="assets/img/doctor/doctor-shape.png" alt="image" />
-				</div>
-				<div class="shape-2">
-					<img src="assets/img/doctor/doctor-shape-2.png" alt="image" />
-				</div>
-			</div>
-		</section>
-		<!-- End Doctor Area -->
 
 		<!-- Start Healthcare Area -->
 		<section class="healthcare-area ptb-100">
@@ -1269,12 +985,9 @@
 								Specialist
 							</h3>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur
-								adipiscing elit, sed do eiusmod tempor
-								incididunt ut labore et dolore magna aliqua. Ut
-								enim ad minim veniam, quis nostrud exercitation
-								ullamco laboris nisi ut aliquip ex ea commodo
-								consequat.
+								Elevate your parenting journey with our comprehensive child care platform. Discover
+								resources, guidance, and a supportive community to help you navigate every aspect of
+								raising a child, ensuring a happy and healthy upbringing for your little one.
 							</p>
 
 							<ul class="healthcare-list">
@@ -1518,10 +1231,13 @@
 					<h2>Specialized Doctors</h2>
 					<div class="bar"></div>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-						sed do eiusmod tempor incididunt ut labore et dolore
-						magna aliqua ut enim ad minim veniam, quis nostrud
-						exercitation ullamco labor.
+						Our team of dedicated doctors is at the heart of our commitment to providing exceptional
+						healthcare. With years of extensive training and experience, our physicians bring expertise,
+						compassion, and a patient-centered approach to every medical encounter. They work tirelessly to
+						diagnose, treat, and care for our patients, always striving for the highest standards of medical
+						excellence. When you choose us, you're choosing a team of skilled professionals who are
+						dedicated to your well-being and health. Your health is in capable hands with our trusted
+						doctors.
 					</p>
 				</div>
 
@@ -1536,13 +1252,17 @@
 		<section class="blog-area pb-70">
 			<div class="container">
 				<div class="section-title">
-					<h2>Our Latest News</h2>
+					<h2>Our Latest Blogs & Events</h2>
 					<div class="bar"></div>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-						sed do eiusmod tempor incididunt ut labore et dolore
-						magna aliqua ut enim ad minim veniam, quis nostrud
-						exercitation ullamco labor.
+						Discover a wealth of captivating content and exciting happenings on our blog and events page!
+						Dive into a world of knowledge, inspiration with our thought-provoking
+						articles, informative guides, and insightful interviews. Stay updated with our latest events,
+						workshops, and webinars, designed to engage and enlighten. Whether you're seeking expert advice,
+						exploring new interests, or simply looking for a dose of inspiration, our platform has something
+						for everyone. Join our vibrant community, where ideas flourish, discussions thrive, and
+						connections are forged. Don't miss out – explore our blog and events today and embark on a
+						journey of learning and discovery!
 					</p>
 				</div>
 
@@ -1743,37 +1463,6 @@
 			</div>
 		</section>
 		<!-- End Categories Area -->
-
-		<!-- Start Newsletter Area -->
-		<div class="newsletter-area bg-color ptb-100">
-			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-lg-6">
-						<div class="newsletter-content">
-							<h2>Subscribe Your Email</h2>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur
-								adipiscing elit, sed do eiusmod tempor
-								incididunt ut labore et dolore magna aliqua.
-							</p>
-						</div>
-					</div>
-
-					<div class="col-lg-6">
-						<form class="newsletter-form">
-							<input type="email" class="input-newsletter" placeholder="Enter your email" name="EMAIL"
-								required autocomplete="off" />
-
-							<button type="submit">Subscribe Now</button>
-
-							<div id="validator-newsletter" class="form-result"></div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- End Newsletter Area -->
-
 		<!-- Start Footer Area -->
 		<section class="footer-area bg-color pt-100 pb-70">
 			<div class="container">
@@ -1788,9 +1477,11 @@
 								CHILDDR
 							</a>
 							<p>
-								Lorem ipsum dolor sit amet consectetur
-								adipiscing elit sed do eiusmod tempor incididunt
-								ut labore dolore magna aliqua.
+								Boost your child's health and happiness with our digital firm's online consultations
+								designed specifically for kids. Our team of experienced pediatric specialists provides
+								convenient, confidential Whether
+								addressing medical concerns or developmental milestones, we are committed to ensuring
+								your child's well-being
 							</p>
 
 							<ul class="footer-social">
