--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en-GB">
 
 <head>
 	<!-- Required meta tags -->
@@ -266,7 +266,7 @@
 						<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 							<ul class="navbar-nav m-auto">
 								<li class="nav-item">
-									<a href="#" class="nav-link"> Home </a>
+									<a href="/" class="nav-link"> Home </a>
 								</li>
 								<li class="nav-item">
 									<a href="about.html" class="nav-link">
@@ -1191,6 +1191,7 @@
 		</div>
 	</section>
 	<!-- End Categories Area -->
+	
 	<!-- Start Footer Area -->
 	<section class="footer-area bg-color pt-100 pb-70">
 		<div class="container">
